# viral-reels-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
scripts/: bootstrap_yt_auth.py
src/: config.py  log_buffer.py  main.py
src/approval/: telegram_bot.py
src/db/: __init__.py  models.py  session.py
src/discovery/: apify_client.py  service.py  tiktok_client.py  viral_filter.py  youtube_client.py
src/processing/: video_processor.py
src/publishing/: ig_publisher.py  yt_publisher.py
src/scheduler/: peak_hours.py  pipeline.py
tests/: test_peak_hours.py  test_viral_filter.py
